--- a/arch/arm64/configs/guyver_defconfig
+++ b/arch/arm64/configs/guyver_defconfig
@@ -497,6 +497,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CHILL is not set
 # config CPU_FREQ_DEFAULT_GOV_RELAXED is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CULTIVATION is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HYPERX is not set 
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set 
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
@@ -508,6 +509,7 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_RELAXED=y
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_CULTIVATION=y
 CONFIG_CPU_FREQ_GOV_HYPERX=y
 CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_BOOST=y
