--- a/arch/arm64/configs/darkness_defconfig
+++ b/arch/arm64/configs/darkness_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.10.107 Kernel Configuration
+# Linux/arm64 3.10.107-Darkness™ Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -484,7 +484,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CHILL is not set
 # CONFIG_CPU_FREQ_GOV_RELAXED is not set
 # CONFIG_CPU_FREQ_GOV_BLU_ACTIVE is not set
-CONFIG_CPU_FREQ_GOV_CULTIVATION=y
+# CONFIG_CPU_FREQ_GOV_CULTIVATION is not set
 # CONFIG_CPU_FREQ_GOV_HYPERX is not set
 # CONFIG_CPU_FREQ_GOV_LIONFISH is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
