--- a/arch/arm64/configs/darkness_defconfig
+++ b/arch/arm64/configs/darkness_defconfig
@@ -3671,7 +3671,7 @@ CONFIG_MSM_PACMAN=y
 CONFIG_MSM_TEST_PACMAN=y
 # CONFIG_MSM_CORE_CTL_HELPER is not set
 CONFIG_MSM_PERFORMANCE=y
-# CONFIG_MSM_PERFORMANCE_HOTPLUG_ON is not set
+CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
 # CONFIG_QCOM_NPA_DUMP is not set
 # CONFIG_KERNEL_TEXT_MPU_PROT is not set
 # CONFIG_TRACER_PKT is not set
