--- a/arch/arm64/configs/darkness_defconfig
+++ b/arch/arm64/configs/darkness_defconfig
@@ -479,6 +479,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HYPERX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKNESS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_MADNESS is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -492,6 +493,7 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_LIONFISH is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_MADNESS=y
 CONFIG_CPU_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
 
@@ -3865,7 +3867,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_MAC_INUIT is not set
 # CONFIG_NLS_MAC_ROMANIAN is not set
 # CONFIG_NLS_MAC_TURKISH is not set
-# CONFIG_NLS_UTF8 is not set
+CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_VIRTUALIZATION is not set
