--- a/arch/arm/boot/dts/qcom/kenzo/cyanogenmod-xiaomi-common.dtsi
+++ b/arch/arm/boot/dts/qcom/kenzo/cyanogenmod-xiaomi-common.dtsi
@@ -12,12 +12,12 @@
 
 / {
 	memory {
-		ramoops_mem: ramoops_mem_region {
+		ramoops_mem: ramoops_region@0x8d900000 {
+			compatible = "removed-dma-pool";
 			linux,reserve-contiguous-region;
 			linux,reserve-region;
 			linux,remove-completely;
 			reg = <0x0 0x8d900000 0x0 0x00100000>;
-			label = "ramoops_mem";
 		};
 	};
 };
@@ -28,12 +28,12 @@
 		status = "ok";
 
 		android,ramoops-buffer-start = <0x8d900000>;
-		android,ramoops-buffer-size = <0x100000>;
-		android,ramoops-console-size = <0x50000>;
-		android,ramoops-record-size = <0x40000>;
-		android,ramoops-annotate-size = <0x1000>;
+		android,ramoops-buffer-size = <0x00100000>;
+		android,ramoops-console-size = <0x00050000>;
+		android,ramoops-pmsg-size = <0x00040000>;
+		android,ramoops-record-size = <0x00040000>;
+		android,ramoops-ftrace-size = <0x00020000>;
 		android,ramoops-dump-oops = <0x1>;
-
 		linux,contiguous-region = <&ramoops_mem>;
 	};
 };
