--- a/arch/arm64/configs/darkness_defconfig
+++ b/arch/arm64/configs/darkness_defconfig
@@ -386,8 +386,8 @@ CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
 CONFIG_KSM=y
-# CONFIG_UKSM is not set
-CONFIG_KSM_LEGACY=y
+CONFIG_UKSM=y
+# CONFIG_KSM_LEGACY is not set
 CONFIG_KSM_CHECK_PAGE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
