--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -199,7 +199,7 @@
 			#size-cells = <1>;
 
 			qcom,iterm-ma = <200>;
-			qcom,fastchg-current-ma = <3000>;
+			/* qcom,fastchg-current-ma = <3000>; */
 			qcom,float-voltage-mv = <4400>;
 			qcom,resume-delta-mv = <200>;
 			qcom,chg-inhibit-fg;
