--- a/arch/arm64/configs/darkness_defconfig
+++ b/arch/arm64/configs/darkness_defconfig
@@ -119,7 +119,7 @@ CONFIG_RCU_NOCB_CPU_ALL=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
 # CONFIG_IKCONFIG_PROC is not set
-CONFIG_LOG_BUF_SHIFT=16
+CONFIG_LOG_BUF_SHIFT=18
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
@@ -393,16 +393,14 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
 CONFIG_CLEANCACHE=y
-CONFIG_FRONTSWAP=y
+# CONFIG_FRONTSWAP is not set
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 CONFIG_ZBUD=y
-CONFIG_Z3FOLD=y
-CONFIG_ZSWAP=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 CONFIG_PROCESS_RECLAIM=y
-CONFIG_ZPOOL=y
+# CONFIG_ZPOOL is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_PGTABLE_MAPPING is not set
 # CONFIG_ZSMALLOC_STAT is not set
@@ -585,11 +583,11 @@ CONFIG_TCP_CONG_WESTWOOD=y
 # CONFIG_TCP_CONG_ILLINOIS is not set
 CONFIG_TCP_CONG_CDG=y
 # CONFIG_TCP_CONG_SOCIOPATH is not set
-CONFIG_DEFAULT_CUBIC=y
-# CONFIG_DEFAULT_WESTWOOD is not set
+# CONFIG_DEFAULT_CUBIC is not set
+CONFIG_DEFAULT_WESTWOOD=y
 # CONFIG_DEFAULT_CDG is not set
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="cubic"
+CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
@@ -1812,9 +1810,11 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_SERIAL_MAX310X is not set
 # CONFIG_SERIAL_MFD_HSU is not set
 CONFIG_SERIAL_CORE=y
+CONFIG_SERIAL_CORE_CONSOLE=y
 # CONFIG_SERIAL_JSM is not set
 CONFIG_SERIAL_MSM_HS=y
-# CONFIG_SERIAL_MSM_HSL is not set
+CONFIG_SERIAL_MSM_HSL=y
+CONFIG_SERIAL_MSM_HSL_CONSOLE=y
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_TIMBERDALE is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
@@ -3468,7 +3468,6 @@ CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_ENABLE_LINUX_REG=y
 # CONFIG_WLAN_OFFLOAD_PACKETS is not set
 CONFIG_QCOM_TDLS=y
-CONFIG_VNSWAP=y
 
 #
 # Qualcomm MSM specific device drivers
@@ -3878,7 +3877,7 @@ CONFIG_DYNAMIC_FSYNC=y
 # Kernel hacking
 #
 CONFIG_PRINTK_TIME=y
-CONFIG_DEFAULT_MESSAGE_LOGLEVEL=1
+CONFIG_DEFAULT_MESSAGE_LOGLEVEL=3
 CONFIG_ENABLE_WARN_DEPRECATED=y
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=2048
