--- a/arch/arm64/configs/darkness_defconfig
+++ b/arch/arm64/configs/darkness_defconfig
@@ -1758,7 +1758,7 @@ CONFIG_SENSORS_BMA2X2=y
 # CONFIG_SENSORS_BMA2X2_ENABLE_INT2 is not set
 # CONFIG_SENSORS_BMI058 is not set
 CONFIG_SENSORS_MC3430=y
-CONFIG_HALL=y
+# CONFIG_HALL is not set
 CONFIG_SENSORS_ISL29044A=y
 # CONFIG_FINGERPRINT_FPC1020_HYDROGEN is not set
 CONFIG_FINGERPRINT_FPC1020_KENZO=y
